Cria notificação na submissão de nova entrega

--- a/app/views/notifications/simple_widget/_show.slim
+++ b/app/views/notifications/simple_widget/_show.slim
@@ -8,6 +8,6 @@ li.list-group-item.clearfix
         span #{notification.title}
         br
           small.text-muted
-            i.fa.fa-quote-left  #{notification.body}
+            = notification.body
             br
             i.fa.fa-clock-o  À cerca de #{notification.ago}
