--- a/app/views/pages/home.slim
+++ b/app/views/pages/home.slim
@@ -12,17 +12,17 @@
         li.active data-slide-to="0" data-target="#main-slider"
       .carousel-inner
         .item.active
-          img.img-background alt="" src="http://cdn01.wallconvert.com/_media/wallpapers_2560x1600/1/2/blurred-rings-14423.jpg"
-            .row
-              .col-md-6.text-right
-                h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Acede a partir de qualquer lado!
-                p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
-                  | Smartphones, Tablets, portáteis
-                  br
-                  | acede em qualquer lado com qualquer dispositivo!
-                = link_to "Entrar", login_path, class: "btn btn-success btn-lg fadeInLeftLarge animation-delay8 m-bottom-lg m-right-md"
-              .col-md-6
-                = image_tag("dashboard-responsive.png", class: "fadeInLeftLarge animation-delay6 m-bottom-lg")
+          = image_tag("slider-bg-1.jpg", class: "img-background", alt: "")
+          .row
+            .col-md-6.text-right
+              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Acede a partir de qualquer lado!
+              p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
+                | Smartphones, Tablets, portáteis
+                br
+                | acede em qualquer lado com qualquer dispositivo!
+              = link_to "Entrar", login_path, class: "btn btn-success btn-lg fadeInLeftLarge animation-delay8 m-bottom-lg m-right-md"
+            .col-md-6
+              = image_tag("dashboard-responsive.png", class: "fadeInLeftLarge animation-delay6 m-bottom-lg")
       a.left.carousel-control data-slide="prev" href="#main-slider"
         span.fa.fa-chevron-left
       a.right.carousel-control data-slide="next" href="#main-slider"
@@ -69,7 +69,7 @@
         .row.recent-work
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation
-              a.hoverBorder href="#"
+              a.hoverBorder
                 span.hoverBorderWrapper
                   = image_tag("home-s-project.jpg")
                     span.hoverBorderInner
@@ -79,7 +79,7 @@
                 small Consulte todas as informações dos seus projetos e a calendarização das próximas fases.
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay2
-              a.hoverBorder href="#"
+              a.hoverBorder
                 span.hoverBorderWrapper
                   = image_tag("home-s-submission.jpg")
                     span.hoverBorderInner
@@ -89,7 +89,7 @@
                 small Submeta facilmente os seus trabalhos práticos e receba uma confirmação da sua validade.
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay4
-              a.hoverBorder href="#"
+              a.hoverBorder
                 span.hoverBorderWrapper
                   = image_tag("home-s-group.jpg")
                     span.hoverBorderInner
@@ -99,7 +99,7 @@
                 small Crie os seus grupos de trabalho de forma fácil e intuitiva para que o trabalho comece da melhor forma.
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay6
-              a.hoverBorder href="#"
+              a.hoverBorder
                 span.hoverBorderWrapper
                   = image_tag("home-s-grades.jpg")
                     span.hoverBorderInner
@@ -127,7 +127,7 @@
         .row.recent-work
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation
-              a.hoverBorder href="#"
+              a.hoverBorder 
                 span.hoverBorderWrapper
                   = image_tag("home-t-ucs.jpg")
                     span.hoverBorderInner
@@ -137,7 +137,7 @@
                 small Crie turnos e projectos dentro das Unidades curriculares que lecciona
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay2
-              a.hoverBorder href="#"
+              a.hoverBorder 
                 span.hoverBorderWrapper
                   = image_tag("home-t-projects.jpg")
                     span.hoverBorderInner
@@ -147,7 +147,7 @@
                 small Crie e monitorize os projectos das suas UCs e espere pelas submissões dos seus alunos
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay4
-              a.hoverBorder href="#"
+              a.hoverBorder 
                 span.hoverBorderWrapper
                   = image_tag("home-t-shifts.png")
                     span.hoverBorderInner
@@ -157,14 +157,16 @@
                 small Crie turnos e faça a gestão de todos os seus alunos de forma fácil e rápida
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay6
-              a.hoverBorder href="#"
+              a.hoverBorder 
                 span.hoverBorderWrapper
                   = image_tag("home-t-grades.jpg")
                     span.hoverBorderInner
               .seperator
               p
                 h4 Gestão de pautas
-                small Faça a gestão de pautas e avaliações dos seus projectos e dos seus alunos        
+                small Faça a gestão de pautas e avaliações dos seus projectos e dos seus alunos     
+      br
+      br   
   footer
     .container style="padding: 20px"
       .row.text-right Engenharia de Linguagens &bull; Projecto Integrador 2013/2014
