--- a/app/views/academic_years/accordion_widget/_show.slim
+++ b/app/views/academic_years/accordion_widget/_show.slim
@@ -9,4 +9,8 @@
         - if subjects.where(academic_year: academic_year).empty?
           = render "subjects/accordion_widget/empty"
         - else
-          = render "subjects/accordion_widget/index", subjects: subjects.where(academic_year: academic_year), mode: mode, student: student
+          - case mode
+          - when "normal"
+            = render "subjects/accordion_widget/index", subjects: subjects.where(academic_year: academic_year), student: student
+          - when "grades"
+            = render "subjects/accordion_widget/index_accordion", subjects: subjects.where(academic_year: academic_year)
