--- a/app/views/academic_years/_accordion_widget.slim
+++ b/app/views/academic_years/_accordion_widget.slim
@@ -1,5 +1,6 @@
+- mode||= "dashboard"
 #accordion.panel-group.fadeInDown.animation-delay2
   - if academic_years.empty?
     = render "academic_years/accordion_widget/empty"
   - else
-    = render "academic_years/accordion_widget/index", academic_years: academic_years, subjects: subjects
+    = render "academic_years/accordion_widget/index", academic_years: academic_years, subjects: subjects, mode: mode
