--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -44,7 +44,7 @@ aside.fixed.skin-6
             span.text Unidades Curriculares
             span.menu-hover
         li
-          a href="#"
+          a href="/grades"
             span.menu-icon
               i.fa.fa-check.fa-lg
             span.text Avaliações
