Listagem de grupos num projeto

--- a/app/views/members/simple_widget/_show.slim
+++ b/app/views/members/simple_widget/_show.slim
@@ -1,6 +1,9 @@
 li.list-group-item.clearfix
   .clearfix
-    a.pull-left.m-right-sm href="#"
-      img.img-circle alt="User Avatar" src="#{student.avatar.url}" style="width:40px;"
+    .pull-left.m-right-sm
+      img.img-circle alt="User Avatar" src="#{student.avatar.url}" style="width:40px;height:40px;"
     strong.block #{student.name}
-    small.text-muted #{student.email}
+    small.text-muted 
+      i.fa.fa-envelope-o  #{student.email}
+      / br
+      / i.fa.fa-star-o  #{student.identifier}
