--- a/app/views/groups/_simple_widget.slim
+++ b/app/views/groups/_simple_widget.slim
@@ -1,8 +1,11 @@
+- mode ||= "project"
 .panel.panel-default.fadeInDown.animation-delay2
   .panel-heading 
     = title
-    .pull-right 
-        .btn.btn-warning.btn-xs Gerir grupos
+    - if mode == "project"
+      .pull-right 
+          = link_to project_groups_path project
+            .btn.btn-warning.btn-xs Gerir grupos
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       - if group.nil?
