Change: Student Grades

--- a/app/views/subjects/accordion_widget/_index_accordion.slim
+++ b/app/views/subjects/accordion_widget/_index_accordion.slim
@@ -1,4 +1,4 @@
-.row-widget
+.row-widget style="padding-bottom: 1%;"
 	.info-widget
 		.panel-group.fadeInDown.animation-delay2
 			- subjects.each.with_index(0) do |subject,i|
