Adiciona sliders, altera set_user no controlador pages e muda cor de dois titulos na home

--- a/app/views/pages/_navbar_not_logged.slim
+++ b/app/views/pages/_navbar_not_logged.slim
@@ -14,7 +14,7 @@ header.navbar.navbar-fixed-top.bg-white
         li
           a.top-link href="#{root_path}" Início
         li
-          a.top-link href="#" Sitemap
+          a.top-link href="#" Mapa do site
         li
           a.top-link href="#" Sobre
         li
