--- a/app/views/pages/_navbar_logged.slim
+++ b/app/views/pages/_navbar_logged.slim
@@ -14,12 +14,12 @@ header.navbar.navbar-fixed-top.bg-white
         li
           a.top-link href="#{root_path}" Início
         li
-          a.top-link href="#" Sitemap
+          a.top-link href="#" Mapa do site
         li
           a.top-link href="#" Sobre
         li
           a.top-link href="#" Pesquisar projectos
         li 
-          = link_to "Painel de gestão",dashboard_path, class: "top-link"
+          = link_to "Painel do #{@user.type.capitalize}", dashboard_path, class: "top-link"
         li
           = link_to "Sair", logout_path, class: "top-link"
