Emails na submissão de entregas

--- a/app/views/phases/table_widget/_show_body.slim
+++ b/app/views/phases/table_widget/_show_body.slim
@@ -1,5 +1,3 @@
 - if mode == "phase"
-	td
-		= "#{(phase.grade(student.id)||0)*10}"
-td
-	= "#{(phase.grade student.id)||0}"
+	td #{(phase.grade(student.id)||0)*10}
+td #{(phase.grade student.id)||0}
