Adiciona pautas de fase e projeto

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -22,8 +22,13 @@ a:-webkit-any-link
 
 .container
   max-width: 100%
-  padding-left: 0px 
+  padding-left: 0px
   padding-right: 0px
 
 .isotope-item
   width: 50%
+
+.table-cm
+  th,td
+    text-align: center
+    vertical-align: middle
