--- a/app/views/phases/accordion_widget/show/_utilities.slim
+++ b/app/views/phases/accordion_widget/show/_utilities.slim
@@ -5,8 +5,8 @@
         span.shortcut-icon
           i.fa.fa-file-text
         span.text Consultar enunciado
-  -if phase.grades  
-    a.shortcut-link href="#"
+  -if phase.grades
+    a.shortcut-link href="/phases/#{phase.id}/grades"
       span.shortcut-icon
         i.fa.fa-check
       span.text Consultar pauta
