Adicionar novos elementos ao grupo de trabalho

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,3 +12,5 @@
 @import "dash_widgets"
 @import "projects"
 @import "dropzone/dropzone.css"
+@import "endless.min.css"
+@import "chosen/chosen.min.css"
