--- a/app/views/groups/_simple_widget.slim
+++ b/app/views/groups/_simple_widget.slim
@@ -11,4 +11,4 @@
       - if group.nil?
         = render "groups/simple_widget/empty"
       - else
-        = render "groups/simple_widget/show", group: group
+        = render "groups/simple_widget/show", group: group, mode: mode
