--- a/app/views/groups/simple_widget/_empty.slim
+++ b/app/views/groups/simple_widget/_empty.slim
@@ -1,1 +1,1 @@
-li.list-group-item.clearfix Em nenhum grupo de trabalho neste projeto.
+li.list-group-item.clearfix Ainda não tem um grupo de trabalho para este projeto.
