--- a/app/views/members/_simple_widget.slim
+++ b/app/views/members/_simple_widget.slim
@@ -1,4 +1,4 @@
 - if students.empty?
   = render "members/simple_widget/empty"
 - else
-  = render "members/simple_widget/index", students: students
+  = render "members/simple_widget/index", students: students, mode: mode
