--- a/app/views/members/simple_widget/_index.slim
+++ b/app/views/members/simple_widget/_index.slim
@@ -1,2 +1,2 @@
 - students.each do |student|
-  = render "members/simple_widget/show", student: student
+  = render "members/simple_widget/show", student: student, mode: mode
