--- a/app/views/members/simple_widget/_show.slim
+++ b/app/views/members/simple_widget/_show.slim
@@ -3,6 +3,15 @@ li.list-group-item.clearfix
     .pull-left.m-right-sm
       img.img-circle alt="User Avatar" src="#{student.avatar.url}" style="width:40px;height:40px;"
     strong.block #{student.name}
+    - if mode=="mygroup"
+      - if student.id == current_user.student.id
+        .pull-right
+          span.label.label-warning 
+            i.fa.fa-sign-out  Sair
+      / - else
+      /   .pull-right
+      /     span.label.label-warning
+      /       i.fa.fa-sign-out  Sair   
     small.text-muted 
       i.fa.fa-envelope-o  #{student.email}
       / br
