--- a/app/views/projects/grades.slim
+++ b/app/views/projects/grades.slim
@@ -9,4 +9,16 @@
   .padding-md
     .row
     	.col-md-12
-    		= render "students/accordion_widget", mode: mode, students: @students, project: @project
+    		table.table.table-striped id="dataTable"
+    			thead
+    				tr
+    					th
+    						= "Nº Aluno"
+    					th style="width: 30%;"
+    						= "Nome"
+    					= render "phases/table_widget/index", phases: @project.phases
+    					th
+    						= "Nota Final"
+    			= render "students/table_widget", students: @students, project: @project
+
+
