Criar novo grupo de trabalho e restrições nas entregas

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -15,3 +15,15 @@ a:-webkit-any-link
 
 .dz-remove
   display: none !important
+
+.chosen-container-multi ul.chosen-choices
+  border-radius: 5px
+  border: 1px solid #ccc
+
+.container
+  max-width: 100%
+  padding-left: 0px 
+  padding-right: 0px
+
+.isotope-item
+  width: 50%
