--- a/app/views/phases/show.slim
+++ b/app/views/phases/show.slim
@@ -10,4 +10,4 @@
       .col-md-8
         = render "phases/accordion_widget", phases: @phases, current_phase: @phase
       .col-md-4
-        = render "deliveries/new", title: "Submeter nova entrega", project: @project, group: @group
+        = render "deliveries/new", title: "Submeter nova entrega", project: @project, group: @group, delivery: @delivery
