--- a/app/views/groups/simple_widget/_show.slim
+++ b/app/views/groups/simple_widget/_show.slim
@@ -1,1 +1,1 @@
-= render "members/simple_widget/index", students: group.students, mode: mode
+= render "members/simple_widget/index", members: group.members, mode: mode, project: project
