--- a/app/views/groups/widgets_group/_index.slim
+++ b/app/views/groups/widgets_group/_index.slim
@@ -1,3 +1,3 @@
 - groups.each do |group|
-  .col-md-6
+  .col-md-6 class="isotope-item"
     = render "groups/simple_widget", group: group, project: project, mode: "groups", title: "#{group.identifier}"
