--- a/app/views/projects/groups.slim
+++ b/app/views/projects/groups.slim
@@ -10,6 +10,21 @@
       .col-md-8 
         = render "groups/widgets_group", project: @project, groups: @groups
       .col-md-4
-        = render "groups/simple_widget", title: "Grupo de trabalho", mode: "mygroup", group: @group
-        = render "members/new", title: "Adicionar elementos", member: @member, students_without_group: @students_without_group, group: @group
+        = render "projects/show/groups", project: @project, title: "Informações"
+        = render "groups/simple_widget", title: "Grupo de trabalho", mode: "mygroup", group: @group, project: @project
+        .fadeInDown.animation-delay2
+          = render "shared/messages"
+        - if @group.nil?
+          - @group = Group.new
+          = render "groups/new", title: "Criar grupo de trabalho", group: @group, project: @project
+        - else 
+          = render "members/new", title: "Adicionar elementos", member: @member, students_without_group: @students_without_group, group: @group, project: @project
         
+javascript:
+  var $container = $('#isotope-container');
+  $container.isotope({
+    itemSelector: '.isotope-item',
+    layoutMode: 'masonry',
+    columnWidth: '.isotope-item',
+    resizable: false
+  });
