Correções nas imagens e textos da home page

--- a/app/views/pages/_navbar_logged.slim
+++ b/app/views/pages/_navbar_logged.slim
@@ -12,14 +12,14 @@ header.navbar.navbar-fixed-top.bg-white
     nav.collapse.navbar-collapse.bs-navbar-collapse role="navigation"
       ul.nav.navbar-nav.navbar-right
         li
-          a.top-link href="#{root_path}" Início
+          a.top-link href="#{root_path}" Página inicial
         li
           a.top-link href="#" Mapa do site
         li
-          a.top-link href="#" Sobre
+          a.top-link href="#" Sobre nós
         li
           a.top-link href="#" Pesquisar projectos
         li 
-          = link_to "Painel do #{@user.type.capitalize}", dashboard_path, class: "top-link"
+          = link_to "Painel do #{@user.type}", dashboard_path, class: "top-link"
         li
           = link_to "Sair", logout_path, class: "top-link"
