--- a/app/views/pages/_navbar_not_logged.slim
+++ b/app/views/pages/_navbar_not_logged.slim
@@ -12,11 +12,11 @@ header.navbar.navbar-fixed-top.bg-white
     nav.collapse.navbar-collapse.bs-navbar-collapse role="navigation"
       ul.nav.navbar-nav.navbar-right
         li
-          a.top-link href="#{root_path}" Início
+          a.top-link href="#{root_path}" Página inicial
         li
           a.top-link href="#" Mapa do site
         li
-          a.top-link href="#" Sobre
+          a.top-link href="#" Sobre nós
         li
           a.top-link href="#" Pesquisar projectos
         li 
