--- a/app/views/members/_form.slim
+++ b/app/views/members/_form.slim
@@ -5,3 +5,5 @@
       br
       br
       button.btn.btn-success type="submit" style="width:100%" Adicionar elementos
+
+= javascript_include_tag "endless_form.js"
