--- a/app/views/pages/home.slim
+++ b/app/views/pages/home.slim
@@ -17,33 +17,70 @@
           = image_tag("slider-bg-1.jpg", class: "img-background", alt: "")
           .row
             .col-md-6.text-right
-              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Acede a partir de qualquer lado!
-              p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
-                | Smartphones, Tablets, portáteis
+              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay1 
+                | Gestão de projetos a partir de 
                 br
-                | acede em qualquer lado com qualquer dispositivo!
-              = link_to "Entrar", login_path, class: "btn btn-success btn-lg fadeInLeftLarge animation-delay8 m-bottom-lg m-right-md"
+                | qualquer dispositivo.
+              p.text-white.fadeInUpLarge.animation-delay2.m-right-md.hidden-xs
+                | O GereTps está oferece a todos os utilizadores uma excelente  
+                br
+                | experiência de utilização, a partir de qualquer dispositivo.
+                br
+                br
+                | Faça a gestão dos seus projetos a partir 
+                br
+                | do computador, tablet ou smartphone.
+              - if user_signed_in?
+                = link_to link_to "Painel do #{@user.type}", dashboard_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
+              - else
+                = link_to "Entre ou Registe-se", login_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
             .col-md-6
-              = image_tag("dashboard-responsive.png", class: "fadeInLeftLarge animation-delay6 m-bottom-lg")
+              = image_tag("dashboard-responsive.png", class: "fadeInLeftLarge animation-delay3 m-bottom-lg")
         .item
           = image_tag("slider-bg-2.jpg", class: "img-background", alt: "")
           .row
             .col-md-6
             .col-md-6
-              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Ser estudante agora é mais fácil
-              p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
-                | Projectos, entregas, turnos, avalições
+              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay1 
+                | Gestão de projetos a pensar 
                 br
-                  | tudo no mesmo sítio à distância de um clique.
+                | em todos os estudantes
+              p.text-white.fadeInUpLarge.animation-delay2.m-right-md.hidden-xs
+                | Simplifique a submissão dos seus projetos,
+                br
+                | organize as suas entregas e mantenha-se atento
+                br
+                | às próximas fases dos seus projetos.
+                br
+                br
+                | Publique os seus trabalhos práticos
+                br
+                | e veja o seu trabalho reconhecido!
+              - if user_signed_in?
+                = link_to link_to "Painel do #{@user.type}", dashboard_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
+              - else
+                = link_to "Entre ou Registe-se", login_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
         .item
           = image_tag("slider-bg-3.jpg", class: "img-background", alt: "")
           .row
             .col-md-6.text-right
-              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Concentre-se em ensinar
-              p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
-                | Forneça todas as informações aos seus alunos sobre ucs e projectos
+              h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay1 
+                | Gestão de projetos a pensar 
                 br
-                  | e foque-se na aprendizagem deles!
+                | em todos os docentes
+              p.text-white.fadeInUpLarge.animation-delay2.m-right-md.hidden-xs
+                | Faça a gestão dos projetos e unidades curriculares 
+                br
+                | que leciona, assim como dos seus alunos e turnos.
+                br
+                br
+                | Simplifique os processos de criação, divulgação, 
+                br
+                | correção e avaliação de um projeto!
+              - if user_signed_in?
+                = link_to link_to "Painel do #{@user.type}", dashboard_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
+              - else
+                = link_to "Entre ou Registe-se", login_path, class: "btn btn-success fadeInRightLarge animation-delay3 m-bottom-lg m-right-md"
       a.left.carousel-control data-slide="prev" href="#main-slider"
         span.fa.fa-chevron-left
       a.right.carousel-control data-slide="next" href="#main-slider"
@@ -77,7 +114,7 @@
       .container
         span.m-right-sm Comece já a fazer a gestão dos seus projetos!
         .inline-block.m-top-sm
-          = link_to signup_path, class: "btn btn-info btn-lg m-bottom-sm fadeInRightLarge animation-delay2", style: "margin: 0 15px 0 15px"
+          = link_to signup_path, class: "btn btn-info m-bottom-sm fadeInRightLarge animation-delay2", style: "margin: 0 15px 0 15px"
             | Registar 
             i.fa.fa-edit    
     
@@ -131,7 +168,7 @@
     
     .bg-white.text-center.content-padding
       .container
-        h3 A forma de gerir as suas UCs e projectos mais fácil e intuitiva
+        h3 Gestão de unidades curriculares e projectos mais fácil e intuitiva!
         h5.text-muted Ser professor e estudante torna-se mais fácil!
         .seperator
         .seperator
@@ -142,7 +179,7 @@
     #portfolio
       .section-header
         hr.left.visible-lg
-          span A melhor escolha também para os Professores!
+          span A melhor escolha para os Docentes!
           hr.right.visible-lg
       .container
         .row.recent-work
@@ -164,7 +201,7 @@
                     span.hoverBorderInner
               .seperator
               p
-                h4 Gestão de Projectos
+                h4 Gestão de projectos
                 small Crie e monitorize os projectos das suas UCs e espere pelas submissões dos seus alunos
           .col-sm-3
             .detail.fadeInUp.animated-element.no-animation.animation-delay4
