--- a/app/views/pages/dashboard.slim
+++ b/app/views/pages/dashboard.slim
@@ -19,4 +19,4 @@
         = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
 
       .col-md-4 
-        = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects
+        = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, student: @user
