--- a/app/views/subjects/accordion_widget/_empty.slim
+++ b/app/views/subjects/accordion_widget/_empty.slim
@@ -1,1 +1,4 @@
-li.list-group-item.clearfix Nenhuma unidade curricular neste ano letivo.
+- if mode == "pending"  
+  li.list-group-item.clearfix Nenhuma inscrição a aguardar aprovação.
+- else
+  li.list-group-item.clearfix Nenhuma unidade curricular neste ano letivo.
