--- a/app/views/subjects/index.slim
+++ b/app/views/subjects/index.slim
@@ -1,64 +1,16 @@
 = render "shared/navbar"
-= render "shared/sidebar", user: @user
+= render "shared/sidebar", user: @user, active:"subjects"
 
 #main-container
-  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type.capitalize}",link: dashboard_path},{name:"Gestão de UCs", link:"#"}]
-  = render "shared/dashboard/header", header: "Gestão de UCs"
+  = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type.capitalize}",link: dashboard_path},{name:"Gestão de unidades curriculares", link:"#"}]
+  = render "shared/dashboard/header", header: "Gestão de unidades curriculares"
   
   .padding-md    
     .row
       .col-md-8 
-        .input-group.m-bottom-md
-          input.form-control placeholder="Introduza critérios de pesquisa. Ex: Engenharia de Linguagens 2013/2014 Minho" type="text"
-            span.input-group-btn
-              button.btn.btn-danger type="button" Procurar
-        .search-container
-          .panel.panel-default
-            .panel-body
-              .search-header
-                a.h4.inline-block href="#" Matemática Discreta &bull; 2013/2014
-                .text-muted Licenciatura em Engenharia Informática &bull; Universidade do Minho
-              p.m-top-sm
-                | Professor responsável: Ana Júlia
-                br 
-                | Professores auxiliares: António Cascais, Ricardo Jorge
-                br
-                br
-                | Projectos em curso: 
-                br
-                | &bull; Determinação eurística de cenas aleatórias
-                br
-                | &bull; Determinação eurística de cenas determinísticas
-               
-              .text-right
-                a.btn.btn-sm.btn-success
-                  i.fa.fa-check
-                  |  Candidatar 
-          .panel.panel-default
-            .panel-body
-              .search-header
-                a.h4.inline-block href="#" Matemática Discreta &bull; 2013/2014
-                .text-muted Licenciatura em Engenharia Informática &bull; Universidade do Minho
-              p.m-top-sm
-                | Professor responsável: Ana Júlia
-                br 
-                | Professores auxiliares: António Cascais, Ricardo Jorge
-                br
-                br
-                | Projectos em curso: 
-                br
-                | &bull; Determinação eurística de cenas aleatórias
-                br
-                | &bull; Determinação eurística de cenas determinísticas
-               
-              .text-right
-                a.btn.btn-sm.btn-success
-                  i.fa.fa-check
-                  |  Candidatar 
-
-
-
-
-
+        = render "subjects/index/search_input"
+        = render "subjects/index/search_results", subjects: @subjects_filtered, student: @user, assigned_student: @assigned_student
       .col-md-4
-        = render "subjects/destroy_widget/index", subjects: @subjects
+        = render "shared/messages"
+        = render "assigned_students/simple_widget", title: "Inscrições pendentes", subjects: @waiting_subjects, mode: "pending", student: @user
+        = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, mode: "management", student: @user
