--- a/app/views/subjects/accordion_widget/_index.slim
+++ b/app/views/subjects/accordion_widget/_index.slim
@@ -1,2 +1,2 @@
 - subjects.each do |subject|
-  = render "subjects/accordion_widget/show", subject: subject
+  = render "subjects/accordion_widget/show", subject: subject, mode: mode, student: student
