Change: Studente Avatar on Project Grades

--- a/app/views/projects/grades.slim
+++ b/app/views/projects/grades.slim
@@ -12,7 +12,8 @@
     		table.table.table-striped id="dataTable"
     			thead
     				tr
-    					th
+    					th style = "width:5%"
+                        th
     						= "Nº Aluno"
     					th
     						= "Nome"
