--- a/app/views/students/table_widget/_show.slim
+++ b/app/views/students/table_widget/_show.slim
@@ -1,4 +1,7 @@
 tr
+	td
+		.pull-left.m-right-sm
+			img.img-circle alt="User Avatar" src= "#{student.avatar.url}"
 	td #{student.identifier}
 	td #{student.user.name}
 	td
