--- a/app/views/projects/grades.slim
+++ b/app/views/projects/grades.slim
@@ -12,7 +12,7 @@
     		table.table.table-striped id="dataTable"
     			thead
     				tr
-    					th style = "width:5%"
+    					th style = "width:50px;"
                         th
     						= "Nº Aluno"
     					th
