Correções nas entregas e pautas

--- a/app/views/phases/_accordion_widget.slim
+++ b/app/views/phases/_accordion_widget.slim
@@ -2,4 +2,4 @@
   - if phases.empty?
     = render "phases/accordion_widget/empty"
   - else
-    = render "phases/accordion_widget/index", phases: phases, current_phase: current_phase
+    = render "phases/accordion_widget/index", phases: phases, current_phase: current_phase, group: group
