--- a/app/views/phases/show.slim
+++ b/app/views/phases/show.slim
@@ -8,6 +8,6 @@
   .padding-md    
     .row
       .col-md-8
-        = render "phases/accordion_widget", phases: @phases, current_phase: @phase
+        = render "phases/accordion_widget", phases: @phases, current_phase: @phase, group: @group
       .col-md-4
         = render "deliveries/new", title: "Submeter nova entrega", project: @project, group: @group, delivery: @delivery
