--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -32,8 +32,8 @@ aside.fixed.skin-6
               i.fa.fa-desktop.fa-lg
             span.text Painel do #{user.type.capitalize}
             span.menu-hover
-        li
-          a href="#"
+        li class="#{'active' if active=='calendar'}"
+          a href="#{calendar_path}"
             span.menu-icon
               i.fa.fa-calendar.fa-lg
             span.text Calendário
