--- a/app/views/notifications/_simple_widget.slim
+++ b/app/views/notifications/_simple_widget.slim
@@ -1,12 +1,12 @@
-.panel.panel-default
-  .panel-heading 
+.panel.panel-default.fadeInDown.animation-delay2
+  .panel-heading
     = title
-    .pull-right 
-        .btn.btn-xs 
-          i.fa.fa-bars  Todas as notificações
+    .pull-right
+        a.btn.btn-primary.btn-xs href="#all-notifications" role="button" data-toggle="modal" Todas as notificações
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       - if notifications.empty?
         = render "notifications/simple_widget/empty"
       - else
-        = render "notifications/simple_widget/index", notifications: notifications
+        = render "notifications/simple_widget/index", notifications: notifications.take(3)
+= render "notifications/modal", notifications: notifications
