Changes db config and makes minor changes to be made public

--- a/app/views/pages/home.slim
+++ b/app/views/pages/home.slim
@@ -85,6 +85,12 @@
         span.fa.fa-chevron-left
       a.right.carousel-control data-slide="next" href="#main-slider"
         span.fa.fa-chevron-right
+    .bg-white.content-padding.text-center.font-lg
+      .container
+        span.m-right-sm
+          i.fa.fa-exclamation-triangle.fa-2x.text-danger style="float: left"
+        span.m-right-sm.text-danger O GereTPS é um projecto de âmbito académico ainda em desenvolvimento, pelo que esta versão disponível online é apenas representativa do processo de desenvolvimento. Na página de login existem dados de login de teste onde é possível testar a aplicação. Obrigado pela visita! 
+    
     .padding-md
       .container
         .row
