--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -8,34 +8,7 @@ body.login-bg
           i.fa.fa-plus-circle.fa-lg
           |  Criar nova conta de utilizador
         .panel-body
-          = devise_error_messages! 
-          = form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-login") do |f|
-            .control-group.text-center
-              = f.label "Tipo de conta", style: "margin-right: 10px"  
-              = select nil, :type, options_for_select([["Estudante", "student"], ['Docente', "teacher"]], 2)
-            .form-group
-              = f.label :name, "Nome"
-              = f.text_field :name, autofocus: true, class: "form-control input-sm bounceIn animation-delay2"
-            .form-group
-              = f.label :email, "Email"
-              = f.email_field :email, class: "form-control input-sm bounceIn animation-delay3 "
-            .form-group#identifier 
-              = label :identifier, "Número de aluno"
-              = text_field_tag :identifier, nil, class: "form-control input-sm bounceIn animation-delay4 "
-            .form-group
-              = f.label :phone, "Telemóvel"
-              = f.text_field :phone, class: "form-control input-sm bounceIn animation-delay5"
-            .form-group
-              = f.label :password, "Palavra-passe" 
-              = f.password_field :password, :class => "form-control input-sm bounceIn animation-delay6"
-            .form-group
-              = f.label :password_confirmation, "Confirmar palavra-passe"
-              = f.password_field :password_confirmation, class: "form-control input-sm bounceIn animation-delay7"
-            .seperator
-            hr/
-            .form-group
-              = link_to "Já criou conta? Faça login", login_path, class: "pull-left"
-              .controls.text-right
-                = f.submit "Registar" , class: "btn btn-success btn-sm bounceIn animation-delay8 login-link pull-right"
-
+          p Registo desactivado!
+          p Por favor dirija-se à página de login e entre com os dados de teste lá específicados.
+          = link_to "Login", login_path, class: "pull-right btn btn-large btn-info"
   script src="assets/registration.coffee"
